RESOLVED FIXED170357
Fix memory leak in CreateSessionDescriptionObserver::OnSuccess
https://bugs.webkit.org/show_bug.cgi?id=170357
Summary Fix memory leak in CreateSessionDescriptionObserver::OnSuccess
youenn fablet
Reported 2017-03-31 13:44:23 PDT
Passed raw pointer should be released.
Attachments
Patch (1.80 KB, patch)
2017-03-31 13:45 PDT, youenn fablet
no flags
Patch (2.90 KB, patch)
2017-04-03 09:31 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-03-31 13:45:36 PDT
Geoffrey Garen
Comment 2 2017-03-31 14:56:17 PDT
Comment on attachment 306007 [details] Patch r=me
WebKit Commit Bot
Comment 3 2017-03-31 15:05:25 PDT
Comment on attachment 306007 [details] Patch Clearing flags on attachment: 306007 Committed r214689: <http://trac.webkit.org/changeset/214689>
WebKit Commit Bot
Comment 4 2017-03-31 15:05:28 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2017-03-31 16:35:45 PDT
Alexey Proskuryakov
Comment 6 2017-03-31 16:59:35 PDT
Rolled back in r214700.
youenn fablet
Comment 7 2017-03-31 17:16:18 PDT
Ah right, I should have updated libwebrtc mock. Will reland with mick updated
youenn fablet
Comment 8 2017-04-03 08:41:26 PDT
Reopening to fix mock
youenn fablet
Comment 9 2017-04-03 09:31:31 PDT
Note You need to log in before you can comment on or make changes to this bug.