Fix memory leak in CreateSessionDescriptionObserver::OnSuccess https://bugs.webkit.org/show_bug.cgi?id=170357

Patch by Youenn Fablet <youenn@apple.com> on 2017-03-31
Reviewed by Geoffrey Garen.

No change of behavior.

* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.cpp:
(WebCore::LibWebRTCMediaEndpoint::createSessionDescriptionSucceeded): Adopting the raw pointer parameter.

Canonical link: https://commits.webkit.org/187271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214689 268f45cc-cd09-0410-ab3c-d52691b4dbfc